# owl_ode

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  LICENSE  Makefile  NOTES.md  README.md  dune-project  highlight.pack.js  index.html  ode.ml  ode.mli  ode.opam  owl-ode-base.opam  owl-ode-odepack.opam  owl-ode-sundials.opam  owl-ode.opam
.github/workflows/: ci.yml
examples/: custom_rk45.ml  damped.ml  dune  van_der_pol.ml  van_der_pol_odepack.ml  van_der_pol_sundials.ml
joss/: paper.bib  paper.md
owl-ode/: index.html  tutorial.html
owl-ode-odepack/Owl_ode_odepack/: index.html
owl-ode-odepack/Owl_ode_odepack/Lsoda/: index.html
owl-ode/Owl_ode/: index.html
owl-ode/Owl_ode/Common/: index.html
owl-ode/Owl_ode/Common/Make/: index.html
owl-ode/Owl_ode/Native/: index.html
owl-ode/Owl_ode/Native/D/: index.html
owl-ode/Owl_ode/Native/S/: index.html
owl-ode/Owl_ode/Native_d/: index.html
owl-ode/Owl_ode/Native_d/Euler/: index.html
owl-ode/Owl_ode/Native_d/Midpoint/: index.html
owl-ode/Owl_ode/Native_d/RK23/: index.html
owl-ode/Owl_ode/Native_d/RK4/: index.html
owl-ode/Owl_ode/Native_d/RK45/: index.html
owl-ode/Owl_ode/Native_generic/: index.html
owl-ode/Owl_ode/Native_generic/Make/: index.html
owl-ode/Owl_ode/Native_s/: index.html
owl-ode/Owl_ode/Native_s/Euler/: index.html
owl-ode/Owl_ode/Native_s/Midpoint/: index.html
owl-ode/Owl_ode/Native_s/RK23/: index.html
owl-ode/Owl_ode/Native_s/RK4/: index.html
owl-ode/Owl_ode/Native_s/RK45/: index.html
owl-ode/Owl_ode/Ode/: index.html
owl-ode/Owl_ode/Symplectic/: index.html
owl-ode/Owl_ode/Symplectic/D/: index.html
owl-ode/Owl_ode/Symplectic/S/: index.html
owl-ode/Owl_ode/Symplectic_d/: index.html
owl-ode/Owl_ode/Symplectic_d/Leapfrog/: index.html
owl-ode/Owl_ode/Symplectic_d/PseudoLeapfrog/: index.html
owl-ode/Owl_ode/Symplectic_d/Ruth3/: index.html
owl-ode/Owl_ode/Symplectic_d/Ruth4/: index.html
owl-ode/Owl_ode/Symplectic_d/Symplectic_Euler/: index.html
owl-ode/Owl_ode/Symplectic_generic/: index.html
owl-ode/Owl_ode/Symplectic_generic/Make/: index.html
owl-ode/Owl_ode/Symplectic_s/: index.html
owl-ode/Owl_ode/Symplectic_s/Leapfrog/: index.html
owl-ode/Owl_ode/Symplectic_s/PseudoLeapfrog/: index.html
owl-ode/Owl_ode/Types/: index.html
owl-ode/Owl_ode__Common/: index.html
owl-ode/Owl_ode__Common/Make/: index.html
owl-ode/Owl_ode__Native/: index.html
owl-ode/Owl_ode__Native/D/: index.html
owl-ode/Owl_ode__Native/S/: index.html
owl-ode/Owl_ode__Native_d/: index.html
owl-ode/Owl_ode__Native_d/Euler/: index.html
owl-ode/Owl_ode__Native_d/Midpoint/: index.html
owl-ode/Owl_ode__Native_d/RK23/: index.html
owl-ode/Owl_ode__Native_d/RK4/: index.html
owl-ode/Owl_ode__Native_d/RK45/: index.html
owl-ode/Owl_ode__Native_generic/: index.html
owl-ode/Owl_ode__Native_generic/Make/: index.html
owl-ode/Owl_ode__Native_s/: index.html
owl-ode/Owl_ode__Native_s/Euler/: index.html
owl-ode/Owl_ode__Native_s/Midpoint/: index.html
owl-ode/Owl_ode__Native_s/RK23/: index.html
owl-ode/Owl_ode__Native_s/RK4/: index.html
owl-ode/Owl_ode__Native_s/RK45/: index.html
owl-ode/Owl_ode__Ode/: index.html
owl-ode/Owl_ode__Symplectic/: index.html
owl-ode/Owl_ode__Symplectic/D/: index.html
owl-ode/Owl_ode__Symplectic/S/: index.html
owl-ode/Owl_ode__Symplectic_d/: index.html
owl-ode/Owl_ode__Symplectic_d/Leapfrog/: index.html
owl-ode/Owl_ode__Symplectic_d/PseudoLeapfrog/: index.html
owl-ode/Owl_ode__Symplectic_d/Ruth3/: index.html
owl-ode/Owl_ode__Symplectic_d/Ruth4/: index.html
owl-ode/Owl_ode__Symplectic_d/Symplectic_Euler/: index.html
owl-ode/Owl_ode__Symplectic_generic/: index.html
owl-ode/Owl_ode__Symplectic_generic/Make/: index.html
owl-ode/Owl_ode__Symplectic_s/: index.html
owl-ode/Owl_ode__Symplectic_s/Leapfrog/: index.html
owl-ode/Owl_ode__Symplectic_s/PseudoLeapfrog/: index.html
owl-ode/Owl_ode__Symplectic_s/Ruth3/: index.html
owl-ode/Owl_ode__Symplectic_s/Ruth4/: index.html
owl-ode/Owl_ode__Symplectic_s/Symplectic_Euler/: index.html
owl-ode/Owl_ode__Types/: index.html
owl-ode/Owl_ode__Types/module-type-Solver/: index.html
owl-ode/Owl_ode__Types/module-type-SolverT/: index.html
owl-ode/owl-ode/: index.html  tutorial.html
owl-ode/owl-ode-base/: index.html
owl-ode/owl-ode-base/Owl_ode_base/: index.html
owl-ode/owl-ode-base/Owl_ode_base__Common/: index.html
owl-ode/owl-ode-base/Owl_ode_base__Native_generic/: index.html
owl-ode/owl-ode-base/Owl_ode_base__Ode/: index.html
owl-ode/owl-ode-base/Owl_ode_base__Symplectic_generic/: index.html
owl-ode/owl-ode-base/Owl_ode_base__Types/: index.html
owl-ode/owl-ode-odepack/: index.html
owl-ode/owl-ode-odepack/Owl_ode_odepack/: index.html
owl-ode/owl-ode-sundials/: index.html
owl-ode/owl-ode-sundials/Owl_ode_sundials/: index.html
owl-ode/owl-ode/Owl_ode/: index.html
owl-ode/owl-ode/Owl_ode__/: index.html
owl-ode/owl-ode/Owl_ode__Native/: index.html
owl-ode/owl-ode/Owl_ode__Native_d/: index.html
owl-ode/owl-ode/Owl_ode__Native_s/: index.html
owl-ode/owl-ode/Owl_ode__Symplectic/: index.html
owl-ode/owl-ode/Owl_ode__Symplectic_d/: index.html
owl-ode/owl-ode/Owl_ode__Symplectic_s/: index.html
src/: common.ml  dune  native.ml  native.mli  ode.ml  ode.mli  sundials.ml  sundials.mli  symplectic.ml  symplectic.mli
src/base/: common.ml  dune  ode.ml  ode.mli  types.ml
src/base/symplectic/: symplectic_generic.ml
src/ode/: common.ml  common_native.ml  dune  index.mld  native.ml  native.mli  ode.ml  ode.mli  ode.owldoc  owl_ode.ml  owl_ode.mli  symplectic.ml  symplectic.mli  tutorial.mld  types.ml  types.owldoc
src/ode/native/: native.ml  native_d.ml  native_d.mli  native_generic.ml  native_generic.mli  native_s.ml  native_s.mli
src/ode/symplectic/: symplectic.ml  symplectic_d.ml  symplectic_d.mli  symplectic_generic.ml  symplectic_generic.mli  symplectic_s.ml  symplectic_s.mli
src/odepack/: dune  owl_ode_odepack.ml  owl_ode_odepack.mli
src/sundials/: dune  owl_ode_sundials.ml  owl_ode_sundials.mli
tests/: dune  tests.ml
(+115 files in other folders)
