opam-version: "2.0"
maintainer: "owlbarn"
authors: [ "Marcello Seri" "Ta-Chu Calvin Kao" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl_ode"
dev-repo: "git+https://github.com/owlbarn/owl_ode.git"
bug-reports: "https://github.com/owlbarn/owl_ode/issues"
doc: "https://owlbarn.github.io/owl_ode/ode"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.10.0"}
  "owl" {>= "0.9.0"}
  "dune" {>= "2.0.0"}
  "owl-ode" {= version}
  "owl-plplot" {with-test}
  "odepack"
]
synopsis: "Owl's ODE solvers, interface with ODEPACK"
description: """OwlDE: ODE Integration library

The ODEPACK library provides bindings to ODEPACK via OCaml's
ODEPACK library.
"""