opam-version: "2.0"
maintainer: "owlbarn"
authors: [ "Marcello Seri" "Ta-Chu Calvin Kao" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl_ode"
dev-repo: "git+https://github.com/owlbarn/owl_ode.git"
bug-reports: "https://github.com/owlbarn/owl_ode/issues"
doc: "https://owlbarn.github.io/owl_ode/ode"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "exec" "examples/van_der_pol.exe"] {with-test}
]
depends: [
  "ocaml" {>= "4.02"}
  "owl" {>= "0.4.0"}
  "dune" {build & >= "1.1.0"}
  "owl-ode" (*{>="0.0.4"}*)
  "sundialsml"
]
synopsis: "Owl's ODE solvers, interface with SundialsML"
