opam-version: "2.0"
maintainer: "owlbarn"
authors: [ "Marcello Seri" "Ta-Chu Calvin Kao" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl_ode"
dev-repo: "git+https://github.com/owlbarn/owl_ode.git"
bug-reports: "https://github.com/owlbarn/owl_ode/issues"
doc: "https://owlbarn.github.io/owl_ode/owl-ode"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "exec" "examples/damped.exe"] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
  "owl" {>= "0.5.0"}
  "owl-plplot" {with-test}
  "dune" {build & >= "1.1.0"}
]
synopsis: "Owl's ODE solvers"
