opam-version: "2.0"
maintainer: "owlbarn"
authors: [ "Marcello Seri" "Ta-Chu Calvin Kao" ]
license: "MIT"
homepage: "https://github.com/owlbarn/owl_ode"
dev-repo: "git+https://github.com/owlbarn/owl_ode.git"
bug-reports: "https://github.com/owlbarn/owl_ode/issues"
doc: "https://owlbarn.github.io/owl_ode/owl-ode"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "owl" {>= "0.7.0"}
  "owl-ode-base" {= version}
  "owl-plplot" {with-test}
  "alcotest" {with-test}
]
synopsis: "Owl's ODE solvers"
description: """OwlDE: ODE Integration library

The main library contains solvers using the faster BLAS/LAPACK 
Owl interface.
"""
