(executables
 (names damped custom_rk45)
 (libraries owl owl-ode owl-plplot)
 (modules damped custom_rk45))

(alias
 (name runtest)
 (action
  (run ./damped.exe))
 (package owl-ode))

(executable
 (name van_der_pol)
 (libraries owl owl-ode owl-ode-sundials owl-plplot)
 (modules van_der_pol))

(alias
 (name runtest)
 (action
  (run ./van_der_pol.exe))
 (package owl-ode-sundials))

(env
 (_
  (env-vars
   (QT_QPA_PLATFORM offscreen))))
